fix pointer overlaps cocktail name

--- a/htdocs/t/cocktails/cocktails.css
+++ b/htdocs/t/cocktails/cocktails.css
@@ -48,6 +48,7 @@
 .cocktail-preview .image-box { position: absolute; width: 100%; height: 80px; left: 0; bottom: 20px; line-height: 80px; text-align: center; }
 .cocktail-preview .image-box .image { vertical-align: bottom; }
 .cocktail-preview .name { position: absolute; left: 0; top: 87px; width: 100%; text-align: center; font-size: 120%; -ms-word-wrap: break-word; word-wrap: break-word; }
+.byIngredients .cocktail-preview .name { left: 10px; width: 80px; }
 
 
 .pager-big {width:64px; height:24px; position:absolute; z-index: 2; left: 565px; top: 409px; }
